# Pacman

./: .gitignore  .replit  Board.cpp  Board.h  Bonus.cpp  Bonus.h  CMakeLists.txt  Coronavirus.cpp  Coronavirus.h  Events.cpp  Events.h  Manager.cpp  Manager.h  Pacman.cpp  Pacman.h  README.TXT  README.md  SFMLapp.cpp  SFMLapp.h  Start.cpp  Start.h  main.cpp  wyniki.txt
